# danika

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  roll.py
app/: bot.py  config.py  i18n.py  logging.py  views.py
app/cogs/: dice.py  general.py  status.py  systems.py
app/data/status/: status_templates.txt  ttrpg_systems.txt
app/dice/: DESIGN.md  DICE_FORMAT.md  __init__.py  evaluator.py  grammar.lark  parser.py  trace.py  types.py
app/enums/: base.py
app/formatters/: dice.py  dnd5e.py  dnd5e_dnd_su.py  dnd5e_wikidot.py  systems.py  table.py
app/systems/: base.py  dnd5e.py  dnd5e_dnd_su.py  dnd5e_wikidot.py  types.py
scripts/: _utils.py  dnd_en.py  dnd_ru.py  roll.py
tests/: test_dice.py  test_dnd5e.py  test_dnd_su.py  test_table_renderer.py
tests/fixtures/: dnd_su24_fire_bolt.html  dnd_su24_hunters_mark.html  dnd_su24_index.html  dnd_su_detect_magic.html  dnd_su_fire_bolt.html  dnd_su_fireball.html  dnd_su_index.html  dnd_su_nathairs_mischief.html  wikidot2024_detect_magic.html  wikidot2024_fire_bolt.html  wikidot2024_fireball.html  wikidot2024_spells_all.html  wikidot_detect_magic.html  wikidot_fireball.html  wikidot_mending.html  wikidot_nathairs_mischief.html  wikidot_search_fire.html  wikidot_search_none.html  wikidot_spells_all.html
